--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
     <div class="main">
-        <input type="range" min="1" max="64" value="16" id="gridSize">
+        <button id="eraser">Eraser</button>
+        <input type="range" min="1" max="80" value="16" id="gridSize">
         <p id="gridSizeShow"></p>
         <div id="gridContainer" class="gridContainer" ondragstart="return false;">
         </div>
