--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="main">
         <button id="eraser">Eraser</button>
+        <button id="rainbow">Rainbow</button>
         <input type="range" min="1" max="80" value="16" id="gridSize">
         <p id="gridSizeShow"></p>
         <div id="gridContainer" class="gridContainer" ondragstart="return false;">
