--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="main">
+        <button id="brush">Brush</button>
+        <button id="shade">Soft Brush</button>
+        <input type="color" id="colorPicker">
         <button id="eraser">Eraser</button>
         <button id="rainbow">Rainbow</button>
         <input type="range" min="1" max="80" value="16" id="gridSize">
