--- a/index.html
+++ b/index.html
@@ -7,21 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <title>Pixel Sketchpad</title>
 </head>
 
 <body>
-    <div class="main">
-        <button id="brush">Brush</button>
-        <button id="shade">Soft Brush</button>
-        <input type="color" id="colorPicker">
-        <button id="eraser">Eraser</button>
-        <button id="rainbow">Rainbow</button>
-        <input type="range" min="1" max="80" value="16" id="gridSize">
-        <p id="gridSizeShow"></p>
-        <div id="gridContainer" class="gridContainer" ondragstart="return false;">
+    <div class="title">PIXEL SKETCHPAD</div>
+    <div class="container">
+        <div class="main">
+            <div class="buttons">
+                <input class="colorPicker" type="color" id="colorPicker" value="#000000">
+                <button id="brush">Brush</button>
+                <button id="rainbow">Rainbow</button>
+                <button id="shade">Soft Brush</button>
+                <button id="eraser">Eraser</button>
+                <button id="reset">Reset</button>
+                <input type="range" min="1" max="80" value="16" id="gridSize">
+                <p class="gridSizeShow" id="gridSizeShow"></p>
+            </div>
+            <div class="sketchPad">
+                <div id="gridContainer" class="gridContainer" ondragstart="return false;"></div>
+            </div>
         </div>
     </div>
+    <div class="footer"></div>
+
 </body>
 
 </html>
