--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button id="shade">Soft Brush</button>
                 <button id="eraser">Eraser</button>
                 <button id="reset">Reset</button>
-                <input type="range" min="1" max="80" value="16" id="gridSize">
+                <input type="range" min="1" max="80" value="16" id="gridSize" class="gridSize">
                 <p class="gridSizeShow" id="gridSizeShow"></p>
             </div>
             <div class="sketchPad">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer"><a href="https://github.com/cebotaritigran">Tigran Cebotari</a></div>
 
 </body>
 
